style.css
/* 
CS Brand Colors:
  Dark pink -- color: #a50a51
  Dark blue -- color: #0494cb
  Light blue -- color: #12b5ea
  Dark green -- color: #558920
  Light green -- color: #86af15
  Orange -- color: #ff6f0c
  Light Orange -- color: #FF9520
  Gray -- color: #636467
*/

body {
  font-family: 'Raleway';
  margin: 6px;
  color: white;
}

#all-cols {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

#rows {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

#col2, #col3 {
  display: grid;
  grid-template-rows: 1fr 1fr;
}

.square {
  margin: 0px;
  min-height: 300px;
}

.topline {
  font-family: 'Asap Condensed', sans-serif;
  font-size: 55px;
  font-weight: 900;
}

.subtitle {
  font-size: 18px;
}

.stat {
  margin: 5%;
  position: relative;
}

.stat span {
  position: absolute;
	top: 190px;
  left: 0;
}

#communities {
  background-color: #ff6f0c;
}

#vet-ended {
  background-color: #a50a51;
  background-image: url("assets/01-vet.png");
  background-position: center;
  background-origin: content-box;
  background-size: 400px;
  background-repeat: no-repeat;
}

#reduction {
  background-color: #558920;
  background-image: url("assets/02-reduction.png");
  background-position: center;
  background-origin: content-box;
  background-size: 400px;
  background-repeat: no-repeat;
}

#housed {
  background-color: #12b5ea;
  background-image: url("assets/03-housed.png");
  background-position: center;
  background-origin: content-box;
  background-size: 400px;
  background-repeat: no-repeat;
}

#quality-data {
  background-color: #0494cb;
  background-image: url("assets/04-quality.png");
  background-position: center;
  background-origin: content-box;
  background-size: 400px;
  background-repeat: no-repeat;
  
}

.map-tooltip {
  background-color: #ff6f0c;
  color: white;
  padding: 1%;
  border: solid 1px white;
  max-width: 200px;
}

#title-head {
  font-family: 'Asap Condensed', sans-serif;
  font-weight: 700;
  font-size: 77px;
  margin: 1% 15% 0% 5%;
  line-height: 75px;
}

#subtitle-head {
  margin: 1% 15% 5% 5.5%;
}

#communities-topline {
  font-family: 'Asap Condensed', sans-serif;
  font-size: 77px;
}

#communities-stat {
  transform: translateY(-20px);
  margin: 0% 10% 0% 5%;
}



/* MEDIA BREAKPOINTS */
@media only screen and (max-width: 1050px) { 
  .stat span {
    position: absolute;
    top: 125px;
    left: 0;
  }
}


@media only screen and (max-width: 750px) { 
  #all-cols {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr;
  }

  .stat span {
    position: absolute;
    top: 150px;
    left: 0;
  }
}

@media only screen and (max-width: 450px) { 

  #all-cols {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 0fr 1fr;
  }

  #rows {
    display: grid;
    grid-template-columns: 1fr;
  }

}

